--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,31 +141,37 @@
         </RadioGroup>
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_layout_gender"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        >
+
+
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="Photo"
-            android:textSize="20sp"
-            android:selectAllOnFocus="true"
             android:textColor="#808080"
-            />
+            android:textSize="20sp" />
         <ImageView
 
-            android:layout_width="match_parent"
             android:id="@+id/my_avatar_imageview"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            />
-    </RelativeLayout>
+
+
+            android:layout_width="53dp"
+
+            android:layout_height="34dp"
+            android:src="@mipmap/ic_camera" />
+
+    </LinearLayout>
 
     <EditText
 
